--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <div id="aboutme">my name is <b>robin frischmann</b> and i am a self-teached <b>webdesigner</b> and <b>developer</b> born 1993 in germany.
                     <br>currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
                     <br>
-                    <br>i love to spend my leisure time with art of all kinds including <b><p class="c1">design.</p> <p class="c2">fine arts.</p> <p class="c
-3">music.</p> <p class="c4">poetry.</p>
+                    <br>i love to spend my leisure time with art of all kinds including <b><p class="c1">design.</p> <p class="c2">fine arts.</p> <p class="c3">music.</p> <p class="c4">poetry.</p>
                     <p class="c5">architecture.</p> <p class="c4">photography.</p> <p class="c3">typography.</p> <p class="c2">languages.</p></b> and <b><p class="c1">theatre.</p></b>
                     <br>
                     <br>also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class="megrim">unverschämt.</a></b>
