--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="layout/css/standard.css" />
     <link rel="stylesheet" href="layout/fonts/fonts.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,100' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
     <script src="layout/js/GUIController.js" type="text/javascript"></script>
     <script>
@@ -42,14 +42,17 @@
                 </center>
                 <br>
                 <br>
-                <div id="aboutme">my name is <b>robin frischmann</b> and i am a self-teached <b>webdesigner</b> and <b>developer</b> born 1993 in germany.
+                <div id="bla"></div>
+                <div id="aboutme">my name is <b>robin frischmann</b> and i am a self-teached <b>webdesigner</b> and <p class="d1">developer</p> born 1993 in germany.
                     <br>currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
                     <br>
                     <br>i love to spend my leisure time with art of all kinds including <b><p class="c1">design.</p> <p class="c2">fine arts.</p> <p class="c3">music.</p> <p class="c4">poetry.</p>
                     <p class="c5">architecture.</p> <p class="c4">photography.</p> <p class="c3">typography.</p> <p class="c2">languages.</p></b> and <b><p class="c1">theatre.</p></b>
                     <br>
                     <br>also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class="megrim">unverschämt.</a></b>
-                    as well as main developer of <b>animateMe.js</b> and <b>mockMe.js</b>.
+                    as well as main developer of
+                    <p class="u4 c4">animateMe.js</p>and</b>
+                    <p class="u1 c1">mockMe.js</p>.
                     <br>
                 </div>
                 <br>
