#12 Vcard + Developer edition

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <img src="content/images/icons/behance.png" onclick="loadBehance()" class="smartNav">
                 <img src="content/images/icons/instagram.png" onclick="loadInstagram()" class="smartNav">
                 <img src="content/images/icons/xing.png" onclick="loadXing()" class="smartNav">
+                <img src="content/images/icons/vcard.png" onclick="loadVCard()" class="smartNav">
                 <img src="content/images/icons/a.png" onclick="loadContact()" class="smartNav">
             </center>
             <br>
