#13 Social-Text + calculateMe.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 
 <head>
+  <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop" />
+  <meta name="description" content="Die Offizielle Website von Sebastian Dernbach - Web &amp; App Developer" />
+  <meta name="author" content="Sebastian Dernbach" />
+
+  <meta property="og:title" content="Sebastian Dernbach - Web &amp; App Developer" />
+  <meta property="og:url" content="http://www.sebastian-dernbach.de/" />
+  <meta property="og:site_name" content="Sebastian Dernbach - Web &amp; App Developer"/>
+  <meta property="og:description" content="Die Offizielle Website von Sebastian Dernbach - Web &amp; App Developer" />
+  <meta property="og:image" content="http://www.sebastian-dernbach.de/images/sebastian-dernbach.jpg" />
+
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Robin Frischmann</title>
+    <title>Robin Frischmann - Web Design & Development</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="layout/css/standard.css" />
     <link rel="stylesheet" href="layout/fonts/fonts.css" />
@@ -25,7 +35,7 @@
             <br>
             <div id="bla"></div>
             <div id="aboutme">my name is <b>robin frischmann</b> and i am a self-teached
-                <b>web<p class="d2" style="vertical-align: 1px">de</p><p class="d2" style="vertical-align: 1px">si</p>g<p class="d2" style="vertical-align: -1px">n</p>er</b> and
+                <b>web<p class="d2" style="vertical-align: 1px">de</p><p class="d2" style="vertical-align: 0px">si</p>g<p class="d2" style="vertical-align: -1px">n</p>er</b> and
                 <code>developer</code> born 1993 in germany.
                 <br>currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
                 <br>
@@ -34,6 +44,7 @@
                 <br>
                 <br>also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class="megrim">unverschämt.</a></b>
                 as well as main developer of
+                <p class="u1 c1" onclick="loadCalculateMe()">calculateMe.js</p>and
                 <p class="u4 c4" onclick="loadAnimateMe()">animateMe.js</p>.
                 <br>
             </div>
@@ -41,12 +52,18 @@
             <br>
             <br>
             <center>
-                <img src="content/images/icons/fb.png" onclick="loadFacebook()" class="smartNav">
-                <img src="content/images/icons/behance.png" onclick="loadBehance()" class="smartNav">
-                <img src="content/images/icons/instagram.png" onclick="loadInstagram()" class="smartNav">
-                <img src="content/images/icons/xing.png" onclick="loadXing()" class="smartNav">
-                <img src="content/images/icons/vcard.png" onclick="loadVCard()" class="smartNav">
-                <img src="content/images/icons/a.png" onclick="loadContact()" class="smartNav">
+                <img id="facebook" src="content/images/icons/fb.png" onclick="loadFacebook()" class="smartNav">
+                <img id="behance" src="content/images/icons/behance.png" onclick="loadBehance()" class="smartNav">
+                <img id="instagram" src="content/images/icons/instagram.png" onclick="loadInstagram()" class="smartNav">
+                <img id="xing" src="content/images/icons/xing.png" onclick="loadXing()" class="smartNav">
+                <img id="vcard" src="content/images/icons/vcard.png" onclick="loadVCard()" class="smartNav">
+                <img id="contact" src="content/images/icons/a.png" onclick="loadContact()" class="smartNav">
+                <p id="facebookText" class="c1">Facebook</p>
+                <p id="behanceText" class="c2">Behance</p>
+                <p id="instagramText" class="c3">Instagram</p>
+                <p id="xingText" class="c4">Xing</p>
+                <p id="vcardText" class="c5">VCard</p>
+                <p id="contactText" class="c3">Contact</p>
             </center>
             <br>
             <br>
