#14 Meta-Tags Keywords

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 
 <head>
-  <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop" />
-  <meta name="description" content="Die Offizielle Website von Sebastian Dernbach - Web &amp; App Developer" />
-  <meta name="author" content="Sebastian Dernbach" />
+    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop" />
+    <meta name="description" content="Robin Frischmann Official Webpage - Web Designer &amp; Developer" />
+    <meta name="author" content="Robin Frischmann" />
 
-  <meta property="og:title" content="Sebastian Dernbach - Web &amp; App Developer" />
-  <meta property="og:url" content="http://www.sebastian-dernbach.de/" />
-  <meta property="og:site_name" content="Sebastian Dernbach - Web &amp; App Developer"/>
-  <meta property="og:description" content="Die Offizielle Website von Sebastian Dernbach - Web &amp; App Developer" />
-  <meta property="og:image" content="http://www.sebastian-dernbach.de/images/sebastian-dernbach.jpg" />
+    <meta property="og:title" content="Robin Frischmann - Web Designer &amp; Developer" />
+    <meta property="og:url" content="http://www.rofrischmann.de/" />
+    <meta property="og:site_name" content="Robin Frischmann - Web Designer &amp; Developer" />
+    <meta property="og:description" content="Robin Frischmann Official Webpage - Web Designer &amp; Developer" />
+    <meta property="og:image" content="http://rofrischmann.de/content/images/me.png" />
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Robin Frischmann - Web Design & Development</title>
+    <title>Robin Frischmann - Web Designer &amp; Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="layout/css/standard.css" />
     <link rel="stylesheet" href="layout/fonts/fonts.css" />
