--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop" />
+    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator" />
     <meta name="description" content="Robin Frischmann Official Webpage - Web Designer &amp; Developer" />
     <meta name="author" content="Robin Frischmann" />
 
