#16 Dots after Social Links

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 <img id="xing" src="content/images/icons/xing.png" onclick="loadXing()" class="smartNav">
                 <img id="vcard" src="content/images/icons/vcard.png" onclick="loadVCard()" class="smartNav">
                 <img id="contact" src="content/images/icons/a.png" onclick="loadContact()" class="smartNav">
-                <p id="facebookText" class="c1">Facebook</p>
-                <p id="behanceText" class="c2">Behance</p>
-                <p id="instagramText" class="c3">Instagram</p>
-                <p id="xingText" class="c4">Xing</p>
-                <p id="vcardText" class="c5">VCard</p>
-                <p id="contactText" class="c3">Contact</p>
+                <p id="facebookText" class="c1">Facebook.</p>
+                <p id="behanceText" class="c2">Behance.</p>
+                <p id="instagramText" class="c3">Instagram.</p>
+                <p id="xingText" class="c4">Xing.</p>
+                <p id="vcardText" class="c5">VCard.</p>
+                <p id="contactText" class="c3">Contact.</p>
             </center>
             <br>
             <br>
