#17 Meta Tag und SocialImages neu

--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 
 <head>
-    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator" />
-    <meta name="description" content="Robin Frischmann Official Webpage - Web Designer &amp; Developer" />
-    <meta name="author" content="Robin Frischmann" />
-
     <meta property="og:title" content="Robin Frischmann - Web Designer &amp; Developer" />
     <meta property="og:url" content="http://www.rofrischmann.de/" />
     <meta property="og:site_name" content="Robin Frischmann - Web Designer &amp; Developer" />
-    <meta property="og:description" content="Robin Frischmann Official Webpage - Web Designer &amp; Developer" />
+    <meta property="og:description" content="Offizielle Webseite. Robin Frischmann ist Web Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich." />
     <meta property="og:image" content="http://rofrischmann.de/content/images/me.png" />
 
+    <meta name="author" content="Robin Frischmann">
+    <meta name="publisher" content="Robin Frischmann">
+    <meta name="copyright" content="Robin Frischmann">
+    <meta name="description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
+    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
+    <meta name="page-topic" content="Medien">
+    <meta name="page-type" content="Software Download">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+
+    <meta name="DC.Creator" content="Robin Frischmann">
+    <meta name="DC.Publisher" content="Robin Frischmann">
+    <meta name="DC.Rights" content="Robin Frischmann">
+    <meta name="DC.Description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+
     <link rel="stylesheet" href="layout/css/standard.css" />
     <link rel="stylesheet" href="layout/fonts/fonts.css" />
     <script src="layout/js/GUIController.js" type="text/javascript"></script>
+    <script src="content/translations.js" type="text/javascript"></script>
 </head>
 
 <body>
