#18 Favicon, Linkfix und Socials besser anordnen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="DC.Rights" content="Robin Frischmann">
     <meta name="DC.Description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="content/images/icons/favicon.ico" type="image/x-icon" />
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
 
     <link rel="stylesheet" href="layout/css/standard.css" />
@@ -55,14 +56,14 @@
                 <br>
                 <br>also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class="megrim">unverschämt.</a></b>
                 as well as main developer of
-                <p class="u1 c1" onclick="loadCalculateMe()">calculateMe.js</p>and
-                <p class="u4 c4" onclick="loadAnimateMe()">animateMe.js</p>.
+                <a class="u1 c1" href="https://bitbucket.org/unverschaemt/calculateme.js">calculateMe.js</a>and
+                <a class="u4 c4" href="https://bitbucket.org/unverschaemt/animateme.js">animateMe.js</a>.
                 <br>
             </div>
             <br>
             <br>
             <br>
-            <center>
+            <center id="socials">
                 <img id="facebook" src="content/images/icons/fb.png" onclick="loadFacebook()" class="smartNav">
                 <img id="behance" src="content/images/icons/behance.png" onclick="loadBehance()" class="smartNav">
                 <img id="instagram" src="content/images/icons/instagram.png" onclick="loadInstagram()" class="smartNav">
