optimierung + contact button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="DC.Rights" content="Robin Frischmann">
     <meta name="DC.Description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="content/images/icons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="http://rofrischmann.de/content/images/icons/favicon.ico" type="image/x-icon" />
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
 
     <link rel="stylesheet" href="layout/css/standard.css" />
@@ -37,7 +37,7 @@
         <br>
         <div class="text">
             <center>
-                <img src="content/images/me.png" class="opacityZero" id="portrait">
+                <img src="content/images/me.jpg" id="portrait">
                 <br>
                 <br>
                 <h1 class="megrim">Portfolio</h1>
@@ -59,9 +59,12 @@
                 <a class="u1 c1" href="https://bitbucket.org/unverschaemt/calculateme.js">calculateMe.js</a>and
                 <a class="u4 c4" href="https://bitbucket.org/unverschaemt/animateme.js">animateMe.js</a>.
                 <br>
+                <br>
+                <br>
+                <center>want to hire me or got questions?
+                    <br><a class="button" onclick="loadContact()"><span class="c1">feel</span><span class="c3">free</span> <span class="c4">to</span> <span class="c4">contact</span> <span class="c5">me</span></a>
+                </center>
             </div>
-            <br>
-            <br>
             <br>
             <center id="socials">
                 <img id="facebook" src="content/images/icons/fb.png" onclick="loadFacebook()" class="smartNav">
