Semantik anpassung und Hire me rechtlich entfernt

--- a/index.html
+++ b/index.html
@@ -1,84 +1,81 @@
 <!DOCTYPE html>
 
 <head>
-    <meta property="og:title" content="Robin Frischmann - Web Designer &amp; Developer" />
-    <meta property="og:url" content="http://www.rofrischmann.de/" />
-    <meta property="og:site_name" content="Robin Frischmann - Web Designer &amp; Developer" />
-    <meta property="og:description" content="Offizielle Webseite. Robin Frischmann ist Web Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich." />
-    <meta property="og:image" content="http://rofrischmann.de/content/images/me.png" />
-
-    <meta name="author" content="Robin Frischmann">
-    <meta name="publisher" content="Robin Frischmann">
-    <meta name="copyright" content="Robin Frischmann">
-    <meta name="description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
-    <meta name="keywords" content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
-    <meta name="page-topic" content="Medien">
-    <meta name="page-type" content="Software Download">
-    <meta name="robots" content="index, follow">
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
-
-    <meta name="DC.Creator" content="Robin Frischmann">
-    <meta name="DC.Publisher" content="Robin Frischmann">
-    <meta name="DC.Rights" content="Robin Frischmann">
-    <meta name="DC.Description" content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta property=og:title content="Robin Frischmann - Web Designer &amp; Developer" />
+    <meta property=og:url content="http://www.rofrischmann.de/" />
+    <meta property=og:site_name content="Robin Frischmann - Web Designer &amp; Developer" />
+    <meta property=og:description content="Offizielle Webseite. Robin Frischmann ist Web Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich." />
+    <meta property=og:image content="http://rofrischmann.de/content/images/me.png" />
+    <meta name=author content="Robin Frischmann">
+    <meta name=publisher content="Robin Frischmann">
+    <meta name=copyright content="Robin Frischmann">
+    <meta name=description content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
+    <meta name=keywords content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
+    <meta name=page-topic content=Medien>
+    <meta name=page-type content="Software Download">
+    <meta name=robots content="index, follow">
+    <meta name=viewport content="width=device-width, initial-scale=0.8">
+    <meta name=DC.Creator content="Robin Frischmann">
+    <meta name=DC.Publisher content="Robin Frischmann">
+    <meta name=DC.Rights content="Robin Frischmann">
+    <meta name=DC.Description content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
+    <meta http-equiv=content-type content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="http://rofrischmann.de/content/images/icons/favicon.ico" type="image/x-icon" />
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
-
-    <link rel="stylesheet" href="layout/css/standard.css" />
-    <link rel="stylesheet" href="layout/fonts/fonts.css" />
-    <script src="layout/js/GUIController.js" type="text/javascript"></script>
-    <script src="content/translations.js" type="text/javascript"></script>
+    <link rel=stylesheet href="layout/css/standard.css" />
+    <link rel=stylesheet href="layout/fonts/fonts.css" />
+    <script src="layout/js/GUIController.js"></script>
+    <script src="content/translations.js"></script>
 </head>
 
 <body>
-    <img id="scrollArrow" class="opacityZero" src="content/images/scroller.png">
-    <div class="page" id="first">
+    <img id=scrollArrow class=opacityZero src="content/images/scroller.png">
+    <div class=page id=first>
         <br>
-        <div class="text">
+        <div class=text>
             <center>
-                <img src="content/images/me.jpg" id="portrait">
+                <img src="content/images/me.jpg" id=portrait>
                 <br>
                 <br>
-                <h1 class="megrim">Portfolio</h1>
+                <h1 class=megrim>Portfolio</h1>
                 <br>
             </center>
             <br>
             <br>
-            <div id="bla"></div>
-            <div id="aboutme">my name is <b>robin frischmann</b> and i am a self-teached
-                <b>web<p class="d2" style="vertical-align: 1px">de</p><p class="d2" style="vertical-align: 0px">si</p>g<p class="d2" style="vertical-align: -1px">n</p>er</b> and
-                <code>developer</code> born 1993 in germany.
-                <br>currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
+            <div id=bla></div>
+            <div id=aboutme>My name is <b>Robin Frischmann</b> and i am a self-teached
+                <b>web<p class=d2 style="vertical-align: 1px">de</p><p class=d2 style="vertical-align: 0px">si</p>g<p class=d2 style="vertical-align: -1px">n</p>er</b> and
+                <code>developer</code> born 1993 in Germany.
+                <br>Currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
                 <br>
-                <br>i love to spend my leisure time with art of all kinds including <b><p class="c1">design.</p> <p class="c2">fine arts.</p> <p class="c3">architecture.</p> <p class="c4">poetry.</p>
-                    <p class="c5">music.</p> <p class="c4">photography.</p> <p class="c3">typography.</p> <p class="c2">languages.</p></b> and <b><p class="c1">theatre.</p></b>
+                <br>I love to spend my leisure time with art of all kinds including <b><p class=c1>design.</p> <p class=c2>fine arts.</p> <p class=c3>architecture.</p> <p class=c4>poetry.</p>
+<p class=c5>music.</p> <p class=c4>photography.</p> <p class=c3>typography.</p> <p class=c2>languages.</p></b> and <b><p class=c1>theatre.</p></b>
                 <br>
-                <br>also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class="megrim">unverschämt.</a></b>
+                <br>Also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class=megrim>unverschämt.</a></b>
                 as well as main developer of
-                <a class="u1 c1" href="https://bitbucket.org/unverschaemt/calculateme.js">calculateMe.js</a>and
-                <a class="u4 c4" href="https://bitbucket.org/unverschaemt/animateme.js">animateMe.js</a>.
+                <a class="u1 c1" href="https://bitbucket.org/rofrischmann/calculate.js">calculate.js</a>and
+                <a class="u4 c4" href="https://bitbucket.org/rofrischmann/animate.js">animate.js</a>.
                 <br>
                 <br>
                 <br>
-                <center>want to hire me or got questions?
-                    <br><a class="button" onclick="loadContact()"><span class="c1">feel</span><span class="c3">free</span> <span class="c4">to</span> <span class="c4">contact</span> <span class="c5">me</span></a>
+                <center>Questions?
+                    <br><a class=button onclick="loadContact()"><span class=c4>Contact</span> <span class=c5>me.</span></a>
                 </center>
             </div>
             <br>
-            <center id="socials">
-                <img id="facebook" src="content/images/icons/fb.png" onclick="loadFacebook()" class="smartNav">
-                <img id="behance" src="content/images/icons/behance.png" onclick="loadBehance()" class="smartNav">
-                <img id="instagram" src="content/images/icons/instagram.png" onclick="loadInstagram()" class="smartNav">
-                <img id="xing" src="content/images/icons/xing.png" onclick="loadXing()" class="smartNav">
-                <img id="vcard" src="content/images/icons/vcard.png" onclick="loadVCard()" class="smartNav">
-                <img id="contact" src="content/images/icons/a.png" onclick="loadContact()" class="smartNav">
-                <p id="facebookText" class="c1">Facebook.</p>
-                <p id="behanceText" class="c2">Behance.</p>
-                <p id="instagramText" class="c3">Instagram.</p>
-                <p id="xingText" class="c4">Xing.</p>
-                <p id="vcardText" class="c5">VCard.</p>
-                <p id="contactText" class="c3">Contact.</p>
+            <center id=socials>
+                <img id=facebook src="content/images/icons/fb.png" onclick="loadFacebook()" class=smartNav>
+                <img id=behance src="content/images/icons/behance.png" onclick="loadBehance()" class=smartNav>
+                <img id=instagram src="content/images/icons/instagram.png" onclick="loadInstagram()" class=smartNav>
+                <img id=xing src="content/images/icons/xing.png" onclick="loadXing()" class=smartNav>
+                <img id=vcard src="content/images/icons/vcard.png" onclick="loadVCard()" class=smartNav>
+                <img id=contact src="content/images/icons/a.png" onclick="loadContact()" class=smartNav>
+                <p id=facebookText class=c1>Facebook.</p>
+                <p id=behanceText class=c2>Behance.</p>
+                <p id=instagramText class=c3>Instagram.</p>
+                <p id=xingText class=c4>Xing.</p>
+                <p id=vcardText class=c5>VCard.</p>
+                <p id=contactText class=c3>Contact.</p>
             </center>
             <br>
             <br>
@@ -87,4 +84,3 @@
 </body>
 
 </html>
-
