optimized code and changed content

--- a/index.html
+++ b/index.html
@@ -1,86 +1,88 @@
 <!DOCTYPE html>
 
 <head>
-    <meta property=og:title content="Robin Frischmann - Web Designer &amp; Developer" />
-    <meta property=og:url content="http://www.rofrischmann.de/" />
-    <meta property=og:site_name content="Robin Frischmann - Web Designer &amp; Developer" />
-    <meta property=og:description content="Offizielle Webseite. Robin Frischmann ist Web Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich." />
-    <meta property=og:image content="http://rofrischmann.de/content/images/me.png" />
+    <meta property=og:title content="Robin Frischmann - Web Designer &amp; Developer">
+    <meta property=og:url content="http://www.rofrischmann.de/">
+    <meta property=og:site_name content="Robin Frischmann - Web Designer &amp; Developer">
+    <meta property=og:description content="Offizielle Webseite. Robin Frischmann ist Web Designer &amp; Developer und immer bereit f&uuml;r neue Herausforderungen im Web &amp; App Bereich.">
+    <meta property=og:image content=http://rofrischmann.de/content/images/me.png>
     <meta name=author content="Robin Frischmann">
     <meta name=publisher content="Robin Frischmann">
     <meta name=copyright content="Robin Frischmann">
     <meta name=description content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
-    <meta name=keywords content="Robin, Frischmann, Webdesign, Web, Design, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
+    <meta name=keywords content="Robin, Frischmann, Webdesign, Web, Design, Swift, JavaScript, iOS, App, Appdesign, Developer, Designer, Development, Webdevelopment, Appdevelopment, Karlsruhe, Germany, Entwickler, HTML, CSS, JavaScript, JS, Photoshop, Adobe, Illustrator">
     <meta name=page-topic content=Medien>
     <meta name=page-type content="Software Download">
     <meta name=robots content="index, follow">
-    <meta name=viewport content="width=device-width, initial-scale=0.8">
+    <meta name=viewport content="width=device-width,initial-scale=0.8">
     <meta name=DC.Creator content="Robin Frischmann">
     <meta name=DC.Publisher content="Robin Frischmann">
     <meta name=DC.Rights content="Robin Frischmann">
     <meta name=DC.Description content="Offizielle Webseite. Robin Frischmann ist Web Designer & Developer und immer bereit für neue Herausforderungen im Web & App Bereich.">
-    <meta http-equiv=content-type content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="http://rofrischmann.de/content/images/icons/favicon.ico" type="image/x-icon" />
+    <meta http-equiv=content-type content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href=http://rofrischmann.de/content/images/icons/favicon.ico type=image/x-icon>
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
-    <link rel=stylesheet href="layout/css/standard.css" />
-    <link rel=stylesheet href="layout/fonts/fonts.css" />
-    <script src="layout/js/GUIController.js"></script>
-    <script src="content/translations.js"></script>
+    <link rel=stylesheet href=layout/css/standard.css>
+    <link rel=stylesheet href=layout/fonts/fonts.css>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-XXXXXX-XX', 'example.com');
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
-    <img id=scrollArrow class=opacityZero src="content/images/scroller.png">
-    <div class=page id=first>
+    <img id=portrait src=content/images/me.jpg>
+    <h1 class=unverschaemt-sans>Portfolio</h1>
+    <section>My name is <b>Robin Frischmann</b> and i am a <b>web<p class=d1 style="vertical-align: 1px">de</p><p class=d1 style="vertical-align: 0px">si</p>g<p class=d1 style="vertical-align: -1px">n</p>er</b> and <code>developer</code> from Germany, currently studying applied informatics.
         <br>
-        <div class=text>
-            <center>
-                <img src="content/images/me.jpg" id=portrait>
-                <br>
-                <br>
-                <h1 class=megrim>Portfolio</h1>
-                <br>
-            </center>
-            <br>
-            <br>
-            <div id=bla></div>
-            <div id=aboutme>My name is <b>Robin Frischmann</b> and i am a self-teached
-                <b>web<p class=d2 style="vertical-align: 1px">de</p><p class=d2 style="vertical-align: 0px">si</p>g<p class=d2 style="vertical-align: -1px">n</p>er</b> and
-                <code>developer</code> born 1993 in Germany.
-                <br>Currently i am studying applied <b>informatics</b> with focus on <b>software development</b>.
-                <br>
-                <br>I love to spend my leisure time with art of all kinds including <b><p class=c1>design.</p> <p class=c2>fine arts.</p> <p class=c3>architecture.</p> <p class=c4>poetry.</p>
-<p class=c5>music.</p> <p class=c4>photography.</p> <p class=c3>typography.</p> <p class=c2>languages.</p></b> and <b><p class=c1>theatre.</p></b>
-                <br>
-                <br>Also i am a <b>co-founder</b> and <b>main designer</b> of an independent mobile game <b>development team</b> named <b><a href="http://unverschaemt.net" class=megrim>unverschämt.</a></b>
-                as well as main developer of
-                <a class="u1 c1" href="https://bitbucket.org/rofrischmann/calculate.js">calculate.js</a>and
-                <a class="u4 c4" href="https://bitbucket.org/rofrischmann/animate.js">animate.js</a>.
-                <br>
-                <br>
-                <br>
-                <center>Questions?
-                    <br><a class=button onclick="loadContact()"><span class=c4>Contact</span> <span class=c5>me.</span></a>
-                </center>
-            </div>
-            <br>
-            <center id=socials>
-                <img id=facebook src="content/images/icons/fb.png" onclick="loadFacebook()" class=smartNav>
-                <img id=behance src="content/images/icons/behance.png" onclick="loadBehance()" class=smartNav>
-                <img id=instagram src="content/images/icons/instagram.png" onclick="loadInstagram()" class=smartNav>
-                <img id=xing src="content/images/icons/xing.png" onclick="loadXing()" class=smartNav>
-                <img id=vcard src="content/images/icons/vcard.png" onclick="loadVCard()" class=smartNav>
-                <img id=contact src="content/images/icons/a.png" onclick="loadContact()" class=smartNav>
-                <p id=facebookText class=c1>Facebook.</p>
-                <p id=behanceText class=c2>Behance.</p>
-                <p id=instagramText class=c3>Instagram.</p>
-                <p id=xingText class=c4>Xing.</p>
-                <p id=vcardText class=c5>VCard.</p>
-                <p id=contactText class=c3>Contact.</p>
-            </center>
-            <br>
-            <br>
-        </div>
-    </div>
+        <br>I love to spend my leisure time with art of all kinds including <b><p class=c1>design.</p> <p class=c2>fine arts.</p> <p class=c3>architecture.</p> <p class=c4>poetry.</p> <p class=c5>music.</p><p class=c4>photography.</p> <p class=c3>typography.</p><p class=c2>languages.</p></b> and <b><p class=c1>theatre.</p></b>
+        <br>
+        <br>Also i am <b>designer</b> of an mobilegame <b>development team</b> named <b><a href=http://unverschaemt.net class=unverschaemt-sans>unverschämt.</a></b> as well as open source <a class="u1 c4" href="https://github.com/rofrischmann?tab=repositories">contributor</a>.</section>
+    <br>
+    <center id=socials>
+        <a id=facebook href=https://www.facebook.com/grindelwald.gaps>
+            <img src=content/images/icons/fb.svg>
+        </a>
+        <a id=instagram href=http://instagram.com/rofrischmann>
+            <img src=content/images/icons/instagram.svg>
+        </a>
+        <a id=behance href=https://www.behance.net/rofrischmann>
+            <img src=content/images/icons/behance.svg>
+        </a>
+        <a id=xing href=https://www.xing.com/profile/Robin_Frischmann>
+            <img src=content/images/icons/xing.svg>
+        </a>
+        <a id=github href=https://github.com/rofrischmann>
+            <img src=content/images/icons/github.svg>
+        </a>
+        <a id=runkeeper href=http://runkeeper.com/user/rofrischmann/profile>
+            <img src=content/images/icons/runkeeper.svg>
+        </a>
+        <a id=vcard href="content/vcard/Robin Frischmann.vcf">
+            <img src=content/images/icons/vcard.svg>
+        </a>
+        <a id=contact href=mailto:robin@rofrischmann.de>
+            <img src=content/images/icons/a.svg>
+        </a>
+        <p id=facebook-text class=c1>Facebook.</p>
+        <p id=behance-text class=c2>Behance.</p>
+        <p id=instagram-text class=c3>Instagram.</p>
+        <p id=github-text class=c3>Github.</p>
+        <p id=runkeeper-text class=c3>Runkeeper.</p>
+        <p id=xing-text class=c4>Xing.</p>
+        <p id=vcard-text class=c5>VCard.</p>
+        <p id=contact-text class=c3>Contact.</p>
+    </center>
 </body>
-
-</html>
