--- a/index.html
+++ b/index.html
@@ -24,22 +24,6 @@
     <title>Robin Frischmann - Web Designer &amp; Developer</title>
     <link rel=stylesheet href=layout/css/standard.css>
     <link rel=stylesheet href=layout/fonts/fonts.css>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXXX-XX', 'example.com');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-    </script>
 </head>
 
 <body>
@@ -85,4 +69,20 @@
         <p id=vcard-text class=c5>VCard.</p>
         <p id=contact-text class=c3>Contact.</p>
     </center>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-51308679-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
